# otus-cpp-12

./: CMakeLists.txt  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: release.yml
cmake/: FindTensorFlow.cmake
src/: classifier.hpp  csv_reader.hpp  hello.cpp  inference.hpp  main.cpp  tf_classifier.cpp  tf_classifier.hpp
